; ModuleID = '/home/carl/AnghaBench/radare2/shlr/tcc/extr_tccgen.c_parse_expr_type.c'
source_filename = "/home/carl/AnghaBench/radare2/shlr/tcc/extr_tccgen.c_parse_expr_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TYPE_ABSTRACT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @parse_expr_type to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @parse_expr_type(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %5 = call i32 @skip(i8 signext 40)
  %6 = load i32*, i32** %2, align 8
  %7 = call i64 @parse_btype(i32* %6, i32* %4)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %13

9:                                                ; preds = %1
  %10 = load i32*, i32** %2, align 8
  %11 = load i32, i32* @TYPE_ABSTRACT, align 4
  %12 = call i32 @type_decl(i32* %10, i32* %4, i32* %3, i32 %11)
  br label %16

13:                                               ; preds = %1
  %14 = load i32*, i32** %2, align 8
  %15 = call i32 @expr_type(i32* %14)
  br label %16

16:                                               ; preds = %13, %9
  %17 = call i32 @skip(i8 signext 41)
  ret void
}

declare dso_local i32 @skip(i8 signext) #1

declare dso_local i64 @parse_btype(i32*, i32*) #1

declare dso_local i32 @type_decl(i32*, i32*, i32*, i32) #1

declare dso_local i32 @expr_type(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
